// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/Button Dangerous Button 1`] = `
<button
  className="px-4 py-2 font-sans text-lg transition cursor-pointer focus-offset bg-white border border-red-500 text-red-500 hover:bg-red-500 hover:bg-opacity-10"
  type="button"
  variant="dangerous"
>
  I am a dangerous button
</button>
`;

exports[`Storyshots UI Elements/Button Default Button 1`] = `
<button
  className="px-4 py-2 font-sans text-lg transition cursor-pointer focus-offset bg-white border border-blue-500 text-blue-500 hover:bg-blue-500 hover:bg-opacity-10"
  type="button"
>
  I am a button
</button>
`;

exports[`Storyshots UI Elements/Button Disabled Button 1`] = `
<button
  className="px-4 py-2 font-sans text-lg transition bg-gray-300 text-gray-600 cursor-default"
  disabled={true}
  type="button"
>
  I am a disabled button
</button>
`;

exports[`Storyshots UI Elements/Button Primary Button 1`] = `
<button
  className="px-4 py-2 font-sans text-lg transition cursor-pointer focus-offset bg-blue-500 text-white hover:opacity-60"
  type="button"
  variant="primary"
>
  I am a primary button
</button>
`;
